# asset-slicer

./: .gitignore  LICENSE  README.md  README.ru.md  THIRD_PARTY_LICENSES.md  capacitor.config.ts  index.html  metadata.json  package-lock.json  package.json  test_stopping_criteria.ts  test_trace_contours.ts  vite.config.ts
.github/workflows/: build-apk.yml
android/: build.gradle  capacitor.settings.gradle  gradle.properties  variables.gradle
android/app/: build.gradle  debug.keystore
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/assetslicer/app/: BackgroundRemovalPlugin.kt  MainActivity.java
android/app/src/main/res/values/: strings.xml
api_python/: main.py  requirements.txt
api_rust/: Cargo.toml
api_rust/src/: main.rs
backend/: main.py
src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
src/components/: AssetCard.tsx  AssetEditor.tsx  AssetGallery.tsx  ImageUploader.tsx  ObjectSelector.tsx  Workspace.tsx
src/plugins/: backgroundRemoval.ts
src/utils/: downloadHelper.ts  imageProcess.test.ts  imageProcess.ts  objectDetect.ts  taskQueue.ts
